Fix account spacing

--- a/client/src/assets/scss/custom/utilities/_spacing.scss
+++ b/client/src/assets/scss/custom/utilities/_spacing.scss
@@ -65,6 +65,9 @@
     .mt--300 {
         margin-top: -300px !important;
     }
+    .mt--450 {
+        margin-top: -450px !important;
+    }
     .mb--300 {
         margin-bottom: -300px !important;
     }
